# investorcenter.ai

./: .coverage  .cursorrules  .dockerignore  .dockerignore.frontend  .env.example  .env.production  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  ALERT_SYSTEM_TEST_PLAN.md  AWS_EKS_DEPLOYMENT.md  CLAUDE.md  CLAUDE_PROMPT_CRYPTO_REMAINING_ISSUES.md  CRITICAL_FIXES_APPLIED.md  CRON_SETUP.md  CRYPTO_API_FIX_DEPLOYMENT.md  CRYPTO_CHARTS_DEPLOYMENT_REPORT.md  CRYPTO_DEPLOYMENT.md  CRYPTO_DEPLOYMENT_GUIDE.md  CRYPTO_DISPLAY_FIXES.md  CRYPTO_PRICE_FIX_SUMMARY.md  CRYPTO_QUICK_REFERENCE.md  CRYPTO_UPDATE_CADENCE.md  CRYPTO_UPDATE_TIMELINE.md  DEPLOYMENT.md  DEPLOYMENT_MANUAL_FUNDAMENTALS.md  DEPLOYMENT_PIPELINE_PLAN.md  DEPLOYMENT_STATUS_COMPARISON.md  DEPLOYMENT_SUCCESS.md  DEPLOY_CRYPTO_NOW.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  Dockerfile.backend  Dockerfile.cik-fetcher  Dockerfile.crypto-service  Dockerfile.crypto-updater  Dockerfile.frontend.prebuilt  (+48 more)
.cache/: tickers_QN_False_True.json  tickers_QN_True_False.json
.next/: trace
.pre-commit-hooks/: check-gofmt.sh
app/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  .gitignore  .golangci.yml  Dockerfile  Dockerfile.amd64  Dockerfile.prebuilt  env.example  go.mod  go.sum  main.go  start-local.sh
components/: Footer.tsx  Header.tsx  MarketOverview.tsx  TickerSearch.tsx  Toast.tsx
config/: gics-sectors.ts  market-config.ts  nyse-holidays.ts
cronjob-monitor/: Dockerfile  monitor.py
data-ingestion-service/: Dockerfile  S3_STRUCTURE.md  go.mod  go.sum  main.go
deploy/: README.md  deploy-backend.sh  deploy-crypto.sh  deploy-frontend.sh
docs/: API_KEY_MANAGEMENT.md  CIK_BACKFILL_REPORT.md  CLAWDBOT_API_REFERENCE.md  CLAWDBOT_PHASE2_SPEC.md  CLAWDBOT_TASK_QUEUE_SPEC.md  CODEBASE_AUDIT.md  COMPETITIVE_ANALYSIS.md  DATA_BACKUP_AND_RECOVERY_PLAN.md  DATA_SCHEMA_AND_UPDATE_CADENCY.md  FINANCIAL_METRICS_ANALYSIS.md  IC_SCORE_2.0_PRODUCT_SPEC.md  earnings-prd.md  (+51 more)
(+1142 files in other folders)
