[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-tickers"
version = "0.1.0"
description = "Download and merge Nasdaq + NYSE tickers using Nasdaq Trader symbol directories"
readme = "scripts/us_tickers/README.md"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "urllib3>=1.26.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
tickers = "us_tickers.cli:main"

[project.urls]
Homepage = "https://github.com/example/us-tickers"
Repository = "https://github.com/example/us-tickers"
Issues = "https://github.com/example/us-tickers/issues"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["us_tickers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=us_tickers --cov-report=term-missing"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
